Make POST user/ return CreateUserResponse
