# api/docs/swagger.json
@@ -77,8 +77,8 @@
                             "$ref": "#/definitions/models.BadRequestResponse"
                         }
                     },
-                    "403": {
-                        "description": "Forbidden",
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/models.NotifyErrorResponse"
                         }
@@ -86,7 +86,7 @@
                 }
             }
         },
-        "/user/create": {
+        "/user": {
             "post": {
                 "description": "Create a new user with FCM token and get API key",
                 "consumes": [
